<resources>
    <string name="app_name">Find My Nanny</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_signup">Authentication</string>
    <string name="email">Email</string>
    <string name="fname">First name</string>
    <string name="lname">Last name</string>
    <string name="password">Password</string>
    <string name="signin_btn">Sign In</string>
    <string name="cancel_btn">Cancel</string>
    <string name="signup_btn">Sign Up</string>
    <string name="register_btn">Register</string>
    <string name="hello">Hello!</string>
    <string name="login_btn">Log in</string>
    <string name="logout_btn">Log out</string>
    <string name="saved_first_name"></string>
    <string name="saved_last_name"></string>
    <string name="alarm_btn">Create alarm</string>
    <string name="remember">Want to remember to call the nanny?</string>
    <string name="btn_time">Pick time</string>
    <string name="btn_date">Pick date</string>
    <string name="btn_alarm">Create alarm</string>
    <string name="txtv_time">Selected time</string>
    <string name="txtv_date">Selected date</string>
    <string name="channel">my_channel</string>
</resources>
