<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/third_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/myshape"
        android:text="@string/btn_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtv_time"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtv_time"
        android:hint="@string/txtv_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_date"
        app:layout_constraintTop_toBottomOf="@+id/btn_time" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_date"
        android:background="@drawable/myshape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtv_time"
        app:layout_constraintBottom_toTopOf="@id/txtv_date"
        android:text="@string/btn_date"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_date"
        app:layout_constraintBottom_toTopOf="@id/btn_alarm"
        android:hint="@string/txtv_date"
        android:id="@+id/txtv_date"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtv_date"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/myshape"
        android:text="@string/btn_alarm"
        android:paddingStart="@dimen/xsmall"
        android:paddingEnd="@dimen/xsmall"
        android:id="@+id/btn_alarm"/>



</androidx.constraintlayout.widget.ConstraintLayout>