<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/hellotxt"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginTop="@dimen/small"
        android:text="@string/hello"
        android:textSize="@dimen/big_text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_container" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login"
        android:id="@+id/main_container">
    </FrameLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:text="@string/login_btn"
        app:layout_constraintTop_toBottomOf="@id/main_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/hellotxt"
        android:layout_marginBottom="@dimen/medium"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logout"
        android:text="@string/logout_btn"
        app:layout_constraintTop_toBottomOf="@id/main_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/hellotxt"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/medium"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>